--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ body {
   scroll-behavior: smooth;
 }
 
+:root:before {
+  content: url("./IMG/*.png")
+}
+
 footer{
 	font-size: 14px;
 	padding: 0 30px 20px 30px;
