--- a/style.css
+++ b/style.css
@@ -2,6 +2,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Advent+Pro:wght@100;200;300&display=swap');
 /* CSS Document */
 
+* {
+        margin: 0;
+        padding: 0;
+        border: 0;
+        outline: 0;
+        font-size: 100%;
+        vertical-align: baseline;
+        background: transparent;
+   }
+
+
 html {
   box-sizing: border-box;
 }
