--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ html {
 
 
 body {
+  max-width: 100%;
+  max-height: 100%;
   font-family: "Advent Pro", Helvetica, Arial, sans-serif;
   font-size: 16px;
   color: #333333;
