--- a/style.css
+++ b/style.css
@@ -209,7 +209,7 @@ nav a{
 
 #content{
 
-	height: 90vh;
+	height: auto;
 	overflow: auto;
 
 	
@@ -340,7 +340,7 @@ footer i{
 
 #about{
 
-	height: 100vh;
+	height: auto;
 	overflow: auto;
 }
 
