--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ p{
 
 header{
 	max-width: 100%;
-	padding: 0;
+	padding-bottom: 25px;
 	margin: auto;
 	overflow: hidden;
 	background: #e7d1b3;
@@ -209,6 +209,7 @@ nav a{
 
 #content{
 
+	min-height: 90vh;
 	height: auto;
 	overflow: auto;
 
